reoganização pastas e styles

--- a/restaurantes/menu_page.html
+++ b/restaurantes/menu_page.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>FoodDash</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../assets/styles/sitecss.css">
 </head>
 
 <body>
@@ -47,61 +47,61 @@
   <div class="container" style="text-align: center;">
     <div class="d-inline-flex p-2 bd-highlight">
       <a class="navbar-brand" href="#">
-        <img src="imgs/pizza_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="../assets/imgs/pizza_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Pizza
       </a>
     </div>
     <div class="d-inline-flex p-2 bd-highlight" style="padding: 0px 0px 0px 20px;">
       <a class="navbar-brand" href="#">
-        <img src="imgs/fastFood_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="../assets/imgs/fastFood_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Fast Food
       </a>
     </div>
     <div class="d-inline-flex p-2 bd-highlight" style="padding: 0px 0px 0px 20px;">
       <a class="navbar-brand" href="#">
-        <img src="imgs/burger_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="../assets/imgs/burger_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Hamburguer
       </a>
     </div>
     <div class="d-inline-flex p-2 bd-highlight" style="padding: 0px 0px 0px 20px;">
       <a class="navbar-brand" href="#">
-        <img src="imgs//sushi_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="../assets/imgs//sushi_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Sushi
       </a>
     </div>
     <div class="d-inline-flex p-2 bd-highlight" style="padding: 0px 0px 0px 20px;">
       <a class="navbar-brand" href="#">
-        <img src="imgs/churrasco_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="../assets/imgs/churrasco_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Churrasco
       </a>
     </div>
     <div class="d-inline-flex p-2 bd-highlight" style="padding: 0px 0px 0px 20px;">
       <a class="navbar-brand" href="#">
-        <img src="imgs/vegan_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="../assets/imgs/vegan_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Vegan
       </a>
     </div>
     <div class="d-inline-flex p-2 bd-highlight" style="padding: 0px 0px 0px 20px;">
       <a class="navbar-brand" href="#">
-        <img src="imgs/portuguesa_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="../assets/imgs/portuguesa_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Portuguesa
       </a>
     </div>
     <div class="d-inline-flex p-2 bd-highlight" style="padding: 0px 0px 0px 20px;">
       <a class="navbar-brand" href="#">
-        <img src="imgs/italiana_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="../assets/imgs/italiana_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Italiana
       </a>
     </div>
     <div class="d-inline-flex p-2 bd-highlight" style="padding: 0px 0px 0px 20px;">
       <a class="navbar-brand" href="#">
-        <img src="imgs/sobremesas_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="../assets/imgs/sobremesas_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Sobremesas
       </a>
     </div>
     <div class="d-inline-flex p-2 bd-highlight" style="padding: 0px 0px 0px 20px;">
       <a class="navbar-brand" href="#">
-        <img src="imgs/bebidas_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="../assets/imgs/bebidas_menu_page.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Bebidas
       </a>
     </div>
@@ -122,7 +122,7 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/mcdonalds_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/mcdonalds_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -139,7 +139,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/kfc_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/kfc_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -156,7 +156,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/burgerKing_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/burgerKing_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -173,7 +173,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/pizzaHut_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/pizzaHut_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -190,7 +190,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/subenshi_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/subenshi_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -211,7 +211,7 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/mcdonalds_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/mcdonalds_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -228,7 +228,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/kfc_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/kfc_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -245,7 +245,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/burgerKing_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/burgerKing_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -262,7 +262,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/pizzaHut_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/pizzaHut_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -279,7 +279,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/subenshi_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/subenshi_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -300,7 +300,7 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/mcdonalds_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/mcdonalds_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -317,7 +317,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/kfc_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/kfc_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -334,7 +334,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/burgerKing_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/burgerKing_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -351,7 +351,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/pizzaHut_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/pizzaHut_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -368,7 +368,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/subenshi_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/subenshi_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -389,7 +389,7 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/mcdonalds_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/mcdonalds_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -406,7 +406,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/kfc_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/kfc_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -423,7 +423,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/burgerKing_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/burgerKing_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -440,7 +440,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/pizzaHut_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/pizzaHut_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -457,7 +457,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/subenshi_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/subenshi_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -478,7 +478,7 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/mcdonalds_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/mcdonalds_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -494,7 +494,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/kfc_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/kfc_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -511,7 +511,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/burgerKing_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/burgerKing_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -528,7 +528,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/pizzaHut_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/pizzaHut_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -545,7 +545,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/subenshi_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/subenshi_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -562,7 +562,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/mcdonalds_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/mcdonalds_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -579,7 +579,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/kfc_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/kfc_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -596,7 +596,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/burgerKing_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/burgerKing_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -613,7 +613,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/pizzaHut_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/pizzaHut_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -630,7 +630,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <img src="imgs/subenshi_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
+          <img src="../assets/imgs/subenshi_restaurantes.png" class="card-img-top" alt="Imagem do restaurante"
             style="border-radius: 5.5px;">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
@@ -666,7 +666,7 @@
       <h1 style="text-align: left; font-weight: bolder; color: white;">FoodDash</h1>
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-2 border-top border-bottom">
         <div class="col mb-3">
-          <img src="imgs/fd_logo_blackWhite.png" alt="Bootstrap" width="190" height="110">
+          <img src="../assets/imgs/fd_logo_blackWhite.png" alt="Bootstrap" width="190" height="110">
         </div>
         <div class="col mb-3"></div>
         <div class="col mb-3">
