--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="../assets/styles/sitecss.css">
+	<link rel="stylesheet" href="../assets/styles/checkout.css">
+    <script src="../assets/js/script.js"></script>
     <title>Checkout</title>
 </head>
 
 <body>
     <div class="container">
         <div class="row justify-content-start" id="logo-row">
-            <img src="imagens/fooddash logo image.png" id="logo" alt="fooddash">
+            <img src="../assets/imgs/fooddash.png" id="logo" alt="fooddash">
         </div>
         <div class="row justify-content-center">
             <h1 class="checkout-title">Checkout</h1>
@@ -22,7 +23,7 @@
         <div class="row justify-content-start align-items-center">
             <div class="col-2">
                 <div class="d-flex flex-row align-items-center" style="margin-left: -50px;">
-                    <img src="imagens/burgerkingLogo.png" alt="Burger King" class="rounded-circle" style="width: 100px; height: 100px;">
+                    <img src="../assets/imgs/burgerkingLogo.png" alt="Burger King" class="rounded-circle" style="width: 100px; height: 100px;">
                     <h2 class="burger-king-title mb-0">Burger King</h2>
                 </div>
             </div>
@@ -43,7 +44,7 @@
                         <h4 class="detalhes-entrega">Detalhes da Entrega</h4>
                         <div class="row align-items-center">
                             <div class="col-auto" style="margin-top: 10px;">
-                                <img src="imagens/iconLocalizacao.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                                <img src="../assets/imgs/iconLocalizacao.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
                             </div>
                             <div id="morada" class="col" style="margin-top: 10px;">
                                 <p id="textoMorada" class="m-0" contenteditable="false">Rua exemplo, Nº1, Aveiro</p>
@@ -62,7 +63,7 @@
                         <h4 class="estimativa-entrega">Estimativa para Entrega</h4>
                         <div class="row align-items-center opcaoEntrega" onclick="toggleSelectionEntrega(this)">
                             <div class="col-auto">
-                                <img src="imagens/iconStandard.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                                <img src="../assets/imgs/iconStandard.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
                             </div>
                             <div class="col">
                                 <p class="m-0">Standard</p>
@@ -71,7 +72,7 @@
                         </div>
                         <div class="row align-items-center opcaoEntrega" onclick="toggleSelectionEntrega(this)">
                             <div class="col-auto">
-                                <img src="imagens/iconAgenda.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                                <img src="../assets/imgs/iconAgenda.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
                             </div>
                             <div class="col">
                                 <p class="m-0">Agendar</p>
@@ -96,7 +97,7 @@
                         <p style="margin-top: 20px;">Escolher forma de pagamento:</p>
                         <div class="row align-items-center opcao" onclick="toggleSelection(this)" style="height: 43px;">
                             <div class="col-auto">
-                                <img src="imagens/iconCartao.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                                <img src="../assets/imgs/iconCartao.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
                             </div>
                             <div class="col">
                                 <p class="m-0">Cartão de Crédito ou Débito</p>
@@ -104,7 +105,7 @@
                         </div>
                         <div class="row align-items-center opcao" onclick="toggleSelection(this)">
                             <div class="col-auto">
-                                <img src="imagens/iconMBWAY.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                                <img src="../assets/imgs/iconMBWAY.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
                             </div>
                             <div class="col">
                                 <p class="m-0">MBWAY</p>
@@ -112,7 +113,7 @@
                         </div>
                         <div class="row align-items-center opcao" onclick="toggleSelection(this)">
                             <div class="col-auto">
-                                <img src="imagens/iconPaypal.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                                <img src="../assets/imgs/iconPaypal.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
                             </div>
                             <div class="col">
                                 <p class="m-0">PayPal</p>
@@ -204,7 +205,7 @@
                         </div>
                         <div class="row align-items-center" style="margin-top: 20px;">
                             <div class="col-auto" style="margin-top: 10px;">
-                                <img src="imagens/iconPromotion.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
+                                <img src="../assets/imgs/iconPromotion.png" alt="Imagem Exemplo" class="img-fluid" style="width: 30px;">
                             </div>
                             <div class="col" style="margin-top: 10px;">
                                 <p class="m-0">Adicionar código promocional</p>
