--- a/login_register/register.html
+++ b/login_register/register.html
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="../assets/styles/sitecss.css">
+
   <title>FoodDash</title>
 </head>
 
 <body>
   <!-- Imagem no canto superior esquerdo -->
-  <img src="FoodDash.png" alt="FoodDash Logo" style="position: absolute; top: 8%; left: 4%; width: 15%; height: auto;">
+  <img src="../assets/imgs/fooddash.png" alt="FoodDash Logo" style="position: absolute; top: 8%; left: 4%; width: 15%; height: auto;">
 
   <!-- Formulário de registo -->
   <div class="container d-flex align-items-center justify-content-center vh-100">
@@ -58,55 +60,7 @@
     </form>
   </div>
 
-
-  <script>
-    document.querySelector("input#mostrarPasswordCheckbox").addEventListener("click", mostrarPassword)
-    function mostrarPassword() {
-      let passwordInput = document.getElementById("inputPassword");
-      let repetirPasswordInput = document.getElementById("inputRepetirPassword");
-      if (passwordInput.type === "password") {
-        passwordInput.type = "text";
-        repetirPasswordInput.type = "text"
-      } else {
-        passwordInput.type = "password";
-        repetirPasswordInput.type = "password"
-      }
-    }
-
-    document.querySelector("button#btnLogin").addEventListener("click", validarlogin)
-    function validarlogin() {
-      let nome = document.querySelector("input#inputName").value;
-      let email = document.querySelector("input#inputEmail").value;
-      let password = document.querySelector("input#inputPassword").value;
-      let repetirPassword = document.querySelector("input#inputRepetirPassword").value;
-
-      console.log(`Nome: ${nome} | Email: ${email} | Password: ${password} | Repetir Password: ${repetirPassword}`);
-
-      if (!validateEmail(email)) {
-        document.querySelector("input#inputEmail").classList.add("form-control is-invalid");
-        alert("Por favor, insira um email válido.");
-        return;
-      } else if (password.length < 6) {
-        document.querySelector("input#inputPassword").classList.add("form-control is-invalid");
-        alert("A palavra-passe deve ter pelo menos 6 caracteres.");
-        return;
-      } else if (password !== repetirPassword) {
-        document.querySelector("input#inputPassword").classList.add("form-control is-invalid");
-        document.querySelector("input#inputRepetirPassword").classList.add("form-control is-invalid");
-        alert("As palavras-passes não são iguais.")
-        return
-      }
-
-      //document.querySelector("input#inputEmail").classList.add("form-control is.valid");
-      //document.querySelector("input#inputPassword").classList.add("form-control is.valid");
-    }
-
-    function validateEmail(email) {
-      const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-      return emailRegex.test(email);
-    }
-  </script>
-
+  <script src="../assets/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
