--- a/perfil_utilizador/dashboard_perfil_estado_pedido.html
+++ b/perfil_utilizador/dashboard_perfil_estado_pedido.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FoodDash</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../perfil_utilizador/styles/sitecss.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../assets/styles/sitecss.css">
+	<link rel="stylesheet" href="../assets/styles/dashboard.css">
+    
   </head>
   <body>
   <!--Zona do Header -->
@@ -14,7 +15,7 @@
     <!-- Top da Página -->
     <div class="row">
       <div class="col-md-3">
-        <img src="../imgs/FoodDash.png" class="img-fluid" alt="Responsive image">
+        <img src="../assets/imgs/FoodDash.png" class="img-fluid" alt="Responsive image">
       </div>
       <div class="col-md-7"></div>
       <div class="col-md-2" style="text-align: right;">
@@ -148,7 +149,7 @@
       <p class="col-md-4 mb-0 text-body-secondary">© 2024 FoodDash</p>
   
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <img src="../imgs/FoodDash.png" class="img-fluid" alt="Responsive image">
+        <img src="../assets/imgs/FoodDash.png" class="img-fluid" alt="Responsive image">
       </a>
   
       <ul class="nav col-md-4 justify-content-end">
