--- a/perfil_utilizador/dashboard_perfil_utilizador.html
+++ b/perfil_utilizador/dashboard_perfil_utilizador.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FoodDash</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../perfil_utilizador/styles/sitecss.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../assets/styles/sitecss.css">
+	<link rel="stylesheet" href="../assets/styles/dashboard.css">
   </head>
   <body>
   <!--Zona do Header -->
@@ -14,7 +14,7 @@
     <!-- Top da Página -->
     <div class="row">
       <div class="col-md-3">
-        <img src="../imgs/FoodDash.png" class="img-fluid" alt="Responsive image">
+        <img src="../assets/imgs/FoodDash.png" class="img-fluid" alt="Responsive image">
       </div>
       <div class="col-md-7"></div>
       <div class="col-md-2" style="text-align: right;">
@@ -109,11 +109,12 @@
                          <span><strong>Status do pedido:</strong> Pedido em Processamento</span></small>
                   </div>
                   <div class="col-sm-1 text-center align-self-center fs-4 py-4 "><strong>9,28€</strong></div>
-                  <div class="col-sm-1 align-self-center text-center h-60"><strong><img class="img-fluid p-3" src="./icons.jpg" alt="" srcset=""></strong></div>
+                  <div class="col-sm-1 align-self-center text-center h-60"><strong><img class="img-fluid p-3" src="../assets/imgs/icon_info.jpg" alt="" srcset=""></strong></div>
                 </div>
         </div>
     </div>
   </div>
+</div>
 
   <!--Limpa conteudo Float -->
   <div class="cleanFloat"></div>
@@ -124,7 +125,7 @@
       <p class="col-md-4 mb-0 text-<body>-secondary">© 2024 FoodDash</p>
   
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <img src="..\imgs\FoodDash.png" class="img-fluid" alt="Responsive image">
+        <img src="../assets/imgs/FoodDash.png" class="img-fluid" alt="Responsive image">
       </a>
   
       <ul class="nav col-md-4 justify-content-end">
