--- a/restaurantes/menu_restaurante_page.html
+++ b/restaurantes/menu_restaurante_page.html
@@ -8,170 +8,8 @@
   <title>FoodDash</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <style>
-    .opcao {
-      position: relative;
-      text-decoration: none;
-    }
-
-    .opcao::after {
-      content: '';
-      position: absolute;
-      bottom: -2px;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background-color: #000;
-      transition: width 0.5s ease;
-    }
-
-    .opcao:hover::after,
-    .opcao:focus::after,
-    .opcao:active::after {
-      width: 100%;
-    }
-
-    .icon-overlay img:hover {
-      transform: scale(1.2);
-    }
-
-    .container {
-      max-width: 1200px;
-      width: 75%;
-    }
-
-    .slider-wrapper {
-      position: relative;
-    }
-
-    .slider-wrapper .slide-button {
-      position: absolute;
-      top: 50%;
-      outline: none;
-      border: none;
-      height: 50px;
-      width: 50px;
-      z-index: 5;
-      color: #fff;
-      display: flex;
-      cursor: pointer;
-      font-size: 2.2rem;
-      background: #000;
-      align-items: center;
-      justify-content: center;
-      border-radius: 50%;
-      transform: translateY(-50%);
-    }
-
-    .slider-wrapper .slide-button:hover {
-      background: #404040;
-    }
-
-    .slider-wrapper .slide-button#prev-slide {
-      left: -25px;
-      display: none;
-    }
-
-    .slider-wrapper .slide-button#next-slide {
-      right: -25px;
-    }
-
-    .slider-wrapper .image-list {
-      display: grid;
-      grid-template-columns: repeat(20, 1fr);
-      /*AQUI PODEMOS AJUSTAR QUANTOS ITENS CABEM NO SLIDER SEM TER DE IR PRA BAIXO*/
-      gap: 18px;
-      font-size: 0;
-      list-style: none;
-      margin-bottom: 30px;
-      overflow-x: auto;
-      scrollbar-width: none;
-    }
-
-    .slider-wrapper .image-list::-webkit-scrollbar {
-      display: none;
-    }
-
-    .slider-wrapper .image-list .image-item {
-      width: 325px;
-      height: 400px;
-      object-fit: cover;
-    }
-
-    .container .slider-scrollbar {
-      height: 24px;
-      width: 100%;
-      display: flex;
-      align-items: center;
-    }
-
-    .slider-scrollbar .scrollbar-track {
-      background: #ccc;
-      width: 100%;
-      height: 2px;
-      display: flex;
-      align-items: center;
-      border-radius: 4px;
-      position: relative;
-    }
-
-    .slider-scrollbar:hover .scrollbar-track {
-      height: 4px;
-    }
-
-    .slider-scrollbar .scrollbar-thumb {
-      position: absolute;
-      background: #000;
-      top: 0;
-      bottom: 0;
-      width: 50%;
-      height: 100%;
-      cursor: grab;
-      border-radius: inherit;
-    }
-
-    .slider-scrollbar .scrollbar-thumb:active {
-      cursor: grabbing;
-      height: 8px;
-      top: -2px;
-    }
-
-    .slider-scrollbar .scrollbar-thumb::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: -10px;
-      bottom: -10px;
-    }
-
-    .slider-wrapper .image-list .image-item {
-      width: 200px;
-      height: 200px;
-    }
-
-    /* Styles for mobile and tablets */
-    @media only screen and (max-width: 1023px) {
-      .slider-wrapper .slide-button {
-        display: none !important;
-      }
-
-      .slider-wrapper .image-list {
-        gap: 10px;
-        margin-bottom: 15px;
-        scroll-snap-type: x mandatory;
-      }
-
-      .slider-wrapper .image-list .image-item {
-        width: 280px;
-        height: 380px;
-      }
-
-      .slider-scrollbar .scrollbar-thumb {
-        width: 20%;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="../assets/styles/sitecss.css">
+	<link rel="stylesheet" href="../assets/styles/restaurants.css">
 </head>
 
 <body>
@@ -217,7 +55,7 @@
           <p class="mb-0">Taxa de Entrega: 2,50€</p>
         </div>
         <div class="col-lg-4 text-center">
-          <img src="imgs/burgerKing_marca.png" alt="Imagem do restaurante" style="max-width: 300px;">
+          <img src="../assets/imgs/burgerKing_marca.png" alt="Imagem do restaurante" style="max-width: 300px;">
         </div>
         <div class="col-lg-4 px-4">
           <div class="input-group mb-3">
@@ -312,10 +150,10 @@
             <div class="col" style="width: 200px;">
               <div class="card shadow-sm">
                 <div class="image-overlay" style="position: relative; border-radius: 5.5px; overflow: hidden;">
-                  <img src="imgs/bigKing_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
+                  <img src="../assets/imgs/bigKing_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
                     style="border-radius: 5.5px;">
                   <div class="icon-overlay" style="position: absolute; bottom: 10px; right: 10px;">
-                    <img src="imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
+                    <img src="../assets/imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
                       style="width: 35px; height: 35px; transition: transform 0.3s, box-shadow 0.3s;">
                   </div>
                 </div>
@@ -334,10 +172,10 @@
             <div class="col" style="width: 200px;">
               <div class="card shadow-sm">
                 <div class="image-overlay" style="position: relative; border-radius: 5.5px; overflow: hidden;">
-                  <img src="imgs/whopper_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
+                  <img src="../assets/imgs/whopper_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
                     style="border-radius: 5.5px;">
                   <div class="icon-overlay" style="position: absolute; bottom: 10px; right: 10px;">
-                    <img src="imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
+                    <img src="../assets/imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
                       style="width: 35px; height: 35px; transition: transform 0.3s, box-shadow 0.3s;">
                   </div>
                 </div>
@@ -356,10 +194,10 @@
             <div class="col" style="width: 200px;">
               <div class="card shadow-sm">
                 <div class="image-overlay" style="position: relative; border-radius: 5.5px; overflow: hidden;">
-                  <img src="imgs/menu_bigKing_bk.png" class="card-img-top" alt="Imagem do restaurante"
+                  <img src="../assets/imgs/menu_bigKing_bk.png" class="card-img-top" alt="Imagem do restaurante"
                     style="border-radius: 5.5px;">
                   <div class="icon-overlay" style="position: absolute; bottom: 10px; right: 10px;">
-                    <img src="imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
+                    <img src="../assets/imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
                       style="width: 35px; height: 35px; transition: transform 0.3s, box-shadow 0.3s;">
                   </div>
                 </div>
@@ -378,10 +216,10 @@
             <div class="col" style="width: 200px;">
               <div class="card shadow-sm">
                 <div class="image-overlay" style="position: relative; border-radius: 5.5px; overflow: hidden;">
-                  <img src="imgs/bigKing_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
+                  <img src="../assets/imgs/bigKing_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
                     style="border-radius: 5.5px;">
                   <div class="icon-overlay" style="position: absolute; bottom: 10px; right: 10px;">
-                    <img src="imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
+                    <img src="../assets/imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
                       style="width: 35px; height: 35px; transition: transform 0.3s, box-shadow 0.3s;">
                   </div>
                 </div>
@@ -400,10 +238,10 @@
             <div class="col" style="width: 200px;">
               <div class="card shadow-sm">
                 <div class="image-overlay" style="position: relative; border-radius: 5.5px; overflow: hidden;">
-                  <img src="imgs/whopper_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
+                  <img src="../assets/imgs/whopper_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
                     style="border-radius: 5.5px;">
                   <div class="icon-overlay" style="position: absolute; bottom: 10px; right: 10px;">
-                    <img src="imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
+                    <img src="../assets/imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
                       style="width: 35px; height: 35px; transition: transform 0.3s, box-shadow 0.3s;">
                   </div>
                 </div>
@@ -422,10 +260,10 @@
             <div class="col" style="width: 200px;">
               <div class="card shadow-sm">
                 <div class="image-overlay" style="position: relative; border-radius: 5.5px; overflow: hidden;">
-                  <img src="imgs/menu_bigKing_bk.png" class="card-img-top" alt="Imagem do restaurante"
+                  <img src="../assets/imgs/menu_bigKing_bk.png" class="card-img-top" alt="Imagem do restaurante"
                     style="border-radius: 5.5px;">
                   <div class="icon-overlay" style="position: absolute; bottom: 10px; right: 10px;">
-                    <img src="imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
+                    <img src="../assets/imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
                       style="width: 35px; height: 35px; transition: transform 0.3s, box-shadow 0.3s;">
                   </div>
                 </div>
@@ -444,10 +282,10 @@
             <div class="col" style="width: 200px;">
               <div class="card shadow-sm">
                 <div class="image-overlay" style="position: relative; border-radius: 5.5px; overflow: hidden;">
-                  <img src="imgs/bigKing_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
+                  <img src="../assets/imgs/bigKing_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
                     style="border-radius: 5.5px;">
                   <div class="icon-overlay" style="position: absolute; bottom: 10px; right: 10px;">
-                    <img src="imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
+                    <img src="../assets/imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
                       style="width: 35px; height: 35px; transition: transform 0.3s, box-shadow 0.3s;">
                   </div>
                 </div>
@@ -466,10 +304,10 @@
             <div class="col" style="width: 200px;">
               <div class="card shadow-sm">
                 <div class="image-overlay" style="position: relative; border-radius: 5.5px; overflow: hidden;">
-                  <img src="imgs/whopper_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
+                  <img src="../assets/imgs/whopper_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
                     style="border-radius: 5.5px;">
                   <div class="icon-overlay" style="position: absolute; bottom: 10px; right: 10px;">
-                    <img src="imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
+                    <img src="../assets/imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
                       style="width: 35px; height: 35px; transition: transform 0.3s, box-shadow 0.3s;">
                   </div>
                 </div>
@@ -488,10 +326,10 @@
             <div class="col" style="width: 200px;">
               <div class="card shadow-sm">
                 <div class="image-overlay" style="position: relative; border-radius: 5.5px; overflow: hidden;">
-                  <img src="imgs/menu_bigKing_bk.png" class="card-img-top" alt="Imagem do restaurante"
+                  <img src="../assets/imgs/menu_bigKing_bk.png" class="card-img-top" alt="Imagem do restaurante"
                     style="border-radius: 5.5px;">
                   <div class="icon-overlay" style="position: absolute; bottom: 10px; right: 10px;">
-                    <img src="imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
+                    <img src="../assets/imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
                       style="width: 35px; height: 35px; transition: transform 0.3s, box-shadow 0.3s;">
                   </div>
                 </div>
@@ -510,10 +348,10 @@
             <div class="col" style="width: 200px;">
               <div class="card shadow-sm">
                 <div class="image-overlay" style="position: relative; border-radius: 5.5px; overflow: hidden;">
-                  <img src="imgs/bigKing_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
+                  <img src="../assets/imgs/bigKing_bk_burger.png" class="card-img-top" alt="Imagem do restaurante"
                     style="border-radius: 5.5px;">
                   <div class="icon-overlay" style="position: absolute; bottom: 10px; right: 10px;">
-                    <img src="imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
+                    <img src="../assets/imgs/mais.png" id="iconAddItem" alt="Ícone de adição"
                       style="width: 35px; height: 35px; transition: transform 0.3s, box-shadow 0.3s;">
                   </div>
                 </div>
@@ -547,7 +385,7 @@
       <h1 style="text-align: left; font-weight: bolder; color: white;">FoodDash</h1>
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-2 border-top border-bottom">
         <div class="col mb-3">
-          <img src="imgs/fd_logo_blackWhite.png" alt="Bootstrap" width="190" height="110">
+          <img src="../assets/imgs/fd_logo_blackWhite.png" alt="Bootstrap" width="190" height="110">
         </div>
         <div class="col mb-3"></div>
         <div class="col mb-3">
