--- a/restaurantes/teste.html
+++ b/restaurantes/teste.html
@@ -9,158 +9,8 @@
     <!-- Google Fonts Link For Icons -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="style.css">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            background: #f1f4fd;
-        }
-
-        .container {
-            max-width: 1200px;
-            width: 95%;
-        }
-
-        .slider-wrapper {
-            position: relative;
-        }
-
-        .slider-wrapper .slide-button {
-            position: absolute;
-            top: 50%;
-            outline: none;
-            border: none;
-            height: 50px;
-            width: 50px;
-            z-index: 5;
-            color: #fff;
-            display: flex;
-            cursor: pointer;
-            font-size: 2.2rem;
-            background: #000;
-            align-items: center;
-            justify-content: center;
-            border-radius: 50%;
-            transform: translateY(-50%);
-        }
-
-        .slider-wrapper .slide-button:hover {
-            background: #404040;
-        }
-
-        .slider-wrapper .slide-button#prev-slide {
-            left: -25px;
-            display: none;
-        }
-
-        .slider-wrapper .slide-button#next-slide {
-            right: -25px;
-        }
-
-        .slider-wrapper .image-list {
-            display: grid;
-            grid-template-columns: repeat(10, 1fr);
-            gap: 18px;
-            font-size: 0;
-            list-style: none;
-            margin-bottom: 30px;
-            overflow-x: auto;
-            scrollbar-width: none;
-        }
-
-        .slider-wrapper .image-list::-webkit-scrollbar {
-            display: none;
-        }
-
-        .slider-wrapper .image-list .image-item {
-            width: 325px;
-            height: 400px;
-            object-fit: cover;
-        }
-
-        .container .slider-scrollbar {
-            height: 24px;
-            width: 100%;
-            display: flex;
-            align-items: center;
-        }
-
-        .slider-scrollbar .scrollbar-track {
-            background: #ccc;
-            width: 100%;
-            height: 2px;
-            display: flex;
-            align-items: center;
-            border-radius: 4px;
-            position: relative;
-        }
-
-        .slider-scrollbar:hover .scrollbar-track {
-            height: 4px;
-        }
-
-        .slider-scrollbar .scrollbar-thumb {
-            position: absolute;
-            background: #000;
-            top: 0;
-            bottom: 0;
-            width: 50%;
-            height: 100%;
-            cursor: grab;
-            border-radius: inherit;
-        }
-
-        .slider-scrollbar .scrollbar-thumb:active {
-            cursor: grabbing;
-            height: 8px;
-            top: -2px;
-        }
-
-        .slider-scrollbar .scrollbar-thumb::after {
-            content: "";
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: -10px;
-            bottom: -10px;
-        }
-
-        .slider-wrapper .image-list .image-item {
-        width: 250px; /* Adjust the width as needed */
-        height: 250px; /* Adjust the height as needed */
-    }
-
-        /* Styles for mobile and tablets */
-        @media only screen and (max-width: 1023px) {
-            .slider-wrapper .slide-button {
-                display: none !important;
-            }
-
-            .slider-wrapper .image-list {
-                gap: 10px;
-                margin-bottom: 15px;
-                scroll-snap-type: x mandatory;
-            }
-
-            .slider-wrapper .image-list .image-item {
-                width: 280px;
-                height: 380px;
-            }
-
-            .slider-scrollbar .scrollbar-thumb {
-                width: 20%;
-            }
-        }
-    </style>
+    	<link rel="stylesheet" href="../assets/styles/sitecss.css">
+	<link rel="stylesheet" href="../assets/styles/restaurants_test.css">
     <script src="script.js" defer></script>
 </head>
 
@@ -171,16 +21,16 @@
                 chevron_left
             </button>
             <ul class="image-list">
-                <img class="image-item" src="imgs/bigKing_bk_burger.png" alt="img-1" />
-                <img class="image-item" src="imgs/whopper_bk_burger.png" alt="img-2" />
-                <img class="image-item" src="imgs/menu_bigKing_bk.png" alt="img-3" />
-                <img class="image-item" src="imgs/bigKing_bk_burger.png" alt="img-4" />
-                <img class="image-item" src="imgs/whopper_bk_burger.png" alt="img-5" />
-                <img class="image-item" src="imgs/menu_bigKing_bk.png" alt="img-6" />
-                <img class="image-item" src="imgs/whopper_bk_burger.png" alt="img-7" />
-                <img class="image-item" src="imgs/bigKing_bk_burger.png" alt="img-8" />
-                <img class="image-item" src="imgs/whopper_bk_burger.png" alt="img-9" />
-                <img class="image-item" src="imgs/menu_bigKing_bk.png" alt="img-10" />
+                <img class="image-item" src="../assets/imgs/bigKing_bk_burger.png" alt="img-1" />
+                <img class="image-item" src="../assets/imgs/whopper_bk_burger.png" alt="img-2" />
+                <img class="image-item" src="../assets/imgs/menu_bigKing_bk.png" alt="img-3" />
+                <img class="image-item" src="../assets/imgs/bigKing_bk_burger.png" alt="img-4" />
+                <img class="image-item" src="../assets/imgs/whopper_bk_burger.png" alt="img-5" />
+                <img class="image-item" src="../assets/imgs/menu_bigKing_bk.png" alt="img-6" />
+                <img class="image-item" src="../assets/imgs/whopper_bk_burger.png" alt="img-7" />
+                <img class="image-item" src="../assets/imgs/bigKing_bk_burger.png" alt="img-8" />
+                <img class="image-item" src="../assets/imgs/whopper_bk_burger.png" alt="img-9" />
+                <img class="image-item" src="../assets/imgs/menu_bigKing_bk.png" alt="img-10" />
             </ul>
             <button id="next-slide" class="slide-button material-symbols-rounded">
                 chevron_right
